pre-check